<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".ui.MainActivity">


    <EditText
        android:id="@+id/text_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:backgroundTint="@color/edittext_focused_color"
        android:ems="12"
        android:fontFamily="serif"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:maxLines="10"
        android:minHeight="48sp"
        android:textAppearance="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,LabelFor,VisualLintOverlap" />

    <com.example.comvi.ui.MotionFeedbackView
        android:id="@+id/motion_feedback_view"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@drawable/circle"
        android:text=""
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/list_notes_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/circle"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/motion_feedback_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/request_location_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/circle"
        android:drawableTop="@drawable/ic_location"
        android:text=""
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/motion_feedback_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>